--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asninfo"
-version = "0.3.2"
+version = "0.3.3"
 edition = "2021"
 authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
 readme = "README.md"
@@ -13,9 +13,9 @@ A utility tool to export ASN information to JSON files.
 keywords = ["bgp", "bgpkit"]
 
 [dependencies]
-bgpkit-commons = "0.8.2"
+bgpkit-commons = "0.9.3"
 serde_json = "1"
-oneio = { version = "0.18.2", default-features = false, features = ["lib-core", "s3", "rustls"] }
+oneio = { version = "0.19.0", default-features = false, features = ["https", "s3"] }
 tracing-subscriber = "0.3"
 tracing = "0.1"
 clap = { version = "4.5", features = ["derive"] }
