--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ oneio = { version = "0.19.0", default-features = false, features = ["https", "s3
 tracing-subscriber = "0.3"
 tracing = "0.1"
 clap = { version = "4.5", features = ["derive"] }
-
-dotenvy = "0.15.7"
-serde = { version = "1.0.210", features = ["derive"] }
+axum = { version = "0.8"}
+ tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "net"] }
+ chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
+ 
+ dotenvy = "0.15.7"
+ serde = { version = "1.0.210", features = ["derive"] }
