--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,10 @@ tracing-subscriber = "0.3"
 tracing = "0.1"
 clap = { version = "4.5", features = ["derive"] }
 axum = { version = "0.8"}
- tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "net"] }
- chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
+tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "net"] }
+chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
  
- dotenvy = "0.15.7"
- serde = { version = "1.0.210", features = ["derive"] }
+dotenvy = "0.15.7"
+serde = { version = "1.0.210", features = ["derive"] }
+http = "1"
+tower-http = { version = "0.6", features = ["cors"] }
