--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,14 @@ keywords = ["bgp", "bgpkit"]
 [dependencies]
 bgpkit-commons = "0.9.5"
 serde_json = "1"
-oneio = { version = "0.19.0", default-features = false, features = ["https", "s3"] }
+oneio = { version = "0.19.2", default-features = false, features = ["https", "s3"] }
 tracing-subscriber = "0.3"
 tracing = "0.1"
 clap = { version = "4.5", features = ["derive"] }
 axum = { version = "0.8"}
 tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "net"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
- 
+rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "logging", "std", "tls12"] }
 dotenvy = "0.15.7"
 serde = { version = "1.0.210", features = ["derive"] }
 http = "1"
